Fix: overflow footer on form builder page

--- a/assets/less/frontend-forms.less
+++ b/assets/less/frontend-forms.less
@@ -5,6 +5,9 @@
 @mediaMD: 1200px;
 
 /* DivTable.com */
+#wpfooter { 
+    position: fixed  !important
+}
 .wpufTable{
     display: table;
     width: 100%;
